feat(html) headre index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             </div>           
         </div>
     </header>
-    
+    <div class="header">
+        <img src="" alt="encabezado">
+
+    </div>
 </body>
 </html>
