--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         </div>
     </header>
     <div class="header">
-        <img src="" alt="encabezado">
+        <img src="/img/header.jpg" alt="encabezado">
+
+    </div>
+    <div class="gallery">
+        <img src="img/img1.jpg" alt="imagen 1">
+        <img src="img/img2.jpg" alt="imagen 2">
+        <img src="img/img3.jpg" alt="imagen 3">
+        <img src="img/img4.jpg" alt="imagen 4">
+        <img src="img/img5.jpg" alt="imagen 5">
+        <img src="img/img6.jpg" alt="imagen 6">
 
     </div>
 </body>
