--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h3>Título de la Entrada 3</h3>
             <p>Fecha: 10 de enero de 2023</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, urna vel vestibulum varius, mi eros consectetur lectus.</p>
-            <a href="#">Leer más</a>
+            <a href="#">Leer máss</a>
         </div>
     </div>
 
